vendor/ouroboros/examples/src/fail_tests/double_mutable_borrow.stderr
error: Cannot borrow mutably twice.
 --> $DIR/double_mutable_borrow.rs:6:26
  |
6 |     #[borrows(mut a, mut a)]
  |                          ^
